# psp-platformer

./: .clangd  .gitignore  CMakeLists.txt  test_map.tmx
res/fonts/: OFL.txt  README-font-collector-com.txt
res/textures/: monkeylad_sprites.tsx  monkeylad_sprites.txt  sprites.tsx
src/: camera.c  camera.h  main.c  object.c  object.h  player.c  player.h  scene.c  scene.h  textures.c  textures.h
